# asam_ods_exd_api_microunidaq

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  example_access_exd_api.ipynb  external_data_file.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: docker-build.yml  python-package.yml
data/: test5.hdf5
tests/: mock_servicer_context.py  test_docker_integration.py  test_example_files.py  test_exd_api.py  test_exd_api_datatypes.py  test_external_data_reader.py  test_roundtrip.py
