[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["external_data_file"]

[project]
name = "asam-ods-exd-api-microunidaq"
version = "1.0.0"
description = "ASAM ODS EXD API implementation to read external data from microUniDAQ HDF5 files."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{name = "peak-solution"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "h5py>=3.0.0",
    "ods-exd-api-box>=1.3.0,<2.0.0",
]

[dependency-groups]
dev = [
    "coverage>=7.0",
    "ipywidgets>=8.1.8",
    "anywidget>=0.10.0",
    "jupyterlab>=4.0",
    "mypy>=1.5",
    "plotly>=6.7.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/peak-solution/asam_ods_exd_api_microunidaq"

[tool.ruff]
line-length = 119
target-version = "py314"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true
exclude = '(^|/)(build|\.venv|\.mypy_cache)(/|$)'

[[tool.mypy.overrides]]
module = "h5py.*"
ignore_missing_imports = true
